--- a/packages/donations-app/app/styles/sass/pages/_home.scss
+++ b/packages/donations-app/app/styles/sass/pages/_home.scss
@@ -153,6 +153,10 @@
       height: 58vh;
     }
 
+    .splash-v3__container-title {
+      top: 120px;
+    }
+
     .alice-footer .row {
       margin: 0 !important;
     }
